[package]
name = "cypher"
version = "0.1.0"
authors = ["Ryan-Symplectic <ryan@symcsx.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
timeit = "0.1.2"
time = "0.2.26"
sha3 = "0.9.1"
rayon = "1.5.0"
